# cortexai-slide-builder

./: CHANGELOG.md  DEPLOYMENT_TROUBLESHOOTING.md  LICENSE  Makefile  PROJECT_OVERVIEW.md  README.md  SNOWFLAKE_ACCESS_GUIDE.md  app.py  cortex_integration.py  deploy_simple.sql  deploy_to_snowflake.sql  environment.yml  pyproject.toml  real_cortex_app.py  requirements.txt  test_cortex_integration.py  test_packages.py  verify_cortex.sql
